--- a/public/nonogram.html
+++ b/public/nonogram.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-  <html lang="en" dir="ltr">
-    <head>
-      <meta charset="utf-8">
-      <title></title>
-    </head>
-    <body>
-      <h1>
-        Hello hello hello
-      </h1>
-    </body>
-  </html>
+<html>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="nono.css">
+</head>
+
+<body>
+
+    <p id="p1">Hello World!</p>
+    <p id="p2">Oi World!</p>
+
+    <script src="nono.js"></script>
+
+</body>
+
+</html>
