--- a/public/nonogram.html
+++ b/public/nonogram.html
@@ -8,7 +8,9 @@
 <body>
 
     <p id="p1">Hello World!</p>
-    <p id="p2">Oi World!</p>
+    <p id="p2">Empty user table should display here!</p>
+    <p id="p3">Answer table should display here!</p>
+    <p id="p4">Cleared answer table should display here!</p>
 
     <script src="nono.js"></script>
 
