reset button added

--- a/public/nonogram.html
+++ b/public/nonogram.html
@@ -12,8 +12,8 @@
 
     <div id="buttons">
         <button type="submit" id=submitAnswer>Submit Answer</button>
-        <button type="button" onclick="toggleAnswerTable()" id=showAnswer>Show Answer</button>
-        <button type="reset" id=resetNono>Reset</button>
+        <button type="button" id=showAnswer onclick="toggleAnswerTable()">Show Answer</button>
+        <button type="reset" id=resetNono onclick="clearUserTable()">Reset</button>
     </div>
 
     <p id="answerTable"></p>
