--- a/public/nonogram.html
+++ b/public/nonogram.html
@@ -8,15 +8,14 @@
 <body>
 
     <p id="text">Hello World!</p>
+    <p id="answerTable"></p>
     <p id="userTable">Empty user table should display here!</p>
 
     <div id="buttons">
-        <button type="submit" id=submitAnswer>Submit Answer</button>
+        <button type="button" id=submitAnswer onclick="submitAnswer()">Submit Answer</button>
         <button type="button" id=showAnswer onclick="toggleAnswerTable()">Show Answer</button>
         <button type="reset" id=resetNono onclick="clearUserTable()">Reset</button>
     </div>
-
-    <p id="answerTable"></p>
 
     <script src="nono.js "></script>
 
