--- a/public/nonogram.html
+++ b/public/nonogram.html
@@ -18,11 +18,15 @@
             <li>
                 For easy of play, an alert will notify you when you are correct: no submitting necessary!
             </li>
+            <li>
+                To multi select: click start and end of the row
+            </li>
         </ul>
         <h4>Good Luck ^_^</h4>
     </div>
 
     <div id="buttons">
+        <button type="button" id="toggleSelect" onclick="toggleSelect()">Toggle multi-line select</button>
         <button type="button" id="changeNono" onclick="changeNono()">Change Puzzle</button>
         <button type="button" id=showAnswer onclick="toggleAnswerTable()">Show Answer</button>
         <button type="reset" id=resetNono onclick="clearUserTable()">Reset</button>
