added in multiline for columns

--- a/public/nonogram.html
+++ b/public/nonogram.html
@@ -19,7 +19,7 @@
                 For easy of play, an alert will notify you when you are correct: no submitting necessary!
             </li>
             <li>
-                To multi select: click start and end of the row
+                To multi select: click start and end of a row (or start and end of a column) to toggle a line of tiles
             </li>
         </ul>
         <h4>Good Luck ^_^</h4>
